--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Running dinosaur</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
         <script src="script.js" type="module"></script>
         <link rel="stylesheet" type="text/css" href="style.css" />
-
     </head>
     <body>
         <canvas class="canvas" width="600" height="150"></canvas>
